[package]
name = "MathsArithmeticTTS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tts_rust = "0.3.3"

#diesel = { version = "1.4.0", features = ["mysql"] }
#dotenv = "0.10"
crossterm = "0.25.0"
